# robot_ws

robot_voice/: CMakeLists.txt  package.xml
robot_voice/launch/: voice_control_robot.launch
robot_voice/src/: robot_controller.cpp  voice_creator.cpp  voice_detector.cpp
robot_voice/srv/: StringToVoice.srv
ros_main/: CMakeLists.txt  package.xml
ros_main/include/: RobotAct.h  action_manager.h  struct.h
ros_main/include/main/: main.hpp
ros_main/launch/: main_env.launch  main_node.launch  simple_nav.launch  test2.launch
ros_main/param/: paramA_main.yaml  paramB_main.yaml
ros_main/src/: ROBOCUP.cpp  main.cpp  nav_test2.cpp  object_speak.cpp  robot_is_entrance.cpp  simple_nav.cpp
ros_main/src/Robot_Act/: RobotAct.cpp
ros_main/src/action_manager/: action_manager.cpp
study_pkg/: CMakeLists.txt  package.xml
study_pkg/launch/: face1.launch  motion_detector.launch  study1.launch  study2.launch
study_pkg/src/: face1.cpp  study1.cpp
wpb_yolo5-main/scripts/: yolo5_node.py
wpb_yolo5-main/src/: wpb_home_grab_yolo.cpp  wpb_home_yolo_3d.cpp
yolov5_ros/: CMakeLists.txt
yolov5_ros/launch/: yolo_v5.launch
yolov5_ros/msg/: BoundingBoxes.msg
yolov5_ros/scripts/: yolo_v5.py
yolov5_ros/yolov5/: detect.py  my.yaml  requirements.txt
yolov5_ros/yolov5/data/: coco128.yaml
yolov5_ros/yolov5/models/: yolo.py
